--- a/index.html
+++ b/index.html
@@ -8,9 +8,45 @@
     <script src="js/scripts.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Audiowide|Averia+Sans+Libre|Baloo|Barrio|Bungee+Shade|Cutive+Mono|Monoton|Sacramento|Share+Tech+Mono|VT323" rel="stylesheet">
     <meta charset="utf-8">
-    <title></title>
+    <title>Groceries</title>
   </head>
   <body>
-
+    <div class="container">
+      <div class="form-container">
+        <h1>Grocery List!</h1>
+        <form id="form1">
+          <div class="form-group">
+              <label for="item1">First Item</label>
+              <input type="text" class="form-control" id="item1" placeholder="Item 1">
+          </div>
+          <div class="form-group">
+              <label for="item2">Second Item</label>
+              <input type="text" class="form-control" id="item2" placeholder="Item 2">
+          </div>
+          <div class="form-group">
+              <label for="item3">Third Item</label>
+              <input type="text" class="form-control" id="item3" placeholder="Item 3">
+          </div>
+          <div class="form-group">
+              <label for="item4">Fourth Item</label>
+              <input type="text" class="form-control" id="item4" placeholder="Item 4">
+          </div>
+          <div class="form-group">
+              <label for="item5">Fifth Item</label>
+              <input type="text" class="form-control" id="item5" placeholder="Item 5">
+          </div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+      </div>
+      <div id="output">
+        <ol>
+          <!-- <li class="item1"></li>
+          <li class="item2"></li>
+          <li class="item3"></li>
+          <li class="item4"></li>
+          <li class="item5"></li> -->
+        </ol>
+      </div>
+    </div>
   </body>
 </html>
